--- a/docs/api/schemas/v1.4/patchwork.yaml
+++ b/docs/api/schemas/v1.4/patchwork.yaml
@@ -816,6 +816,189 @@ paths:
                 $ref: '#/components/schemas/Error'
       tags:
         - comments
+  /api/1.4/patches/{patch_id}/notes/{note_id}:
+    parameters:
+      - in: path
+        name: patch_id
+        description: A unique integer value identifying the parent patch.
+        required: true
+        schema:
+          title: Patch ID
+          type: integer
+      - in: path
+        name: note_id
+        description: A unique integer value identifying the note.
+        required: true
+        schema:
+          title: Note ID
+          type: integer
+    get:
+      summary: Retrieve a patch note.
+      description: |
+        Retrieve note from a patch by the ID of the patch.
+      operationId: patch_notes_read
+      responses:
+        '200':
+          description: 'A patch note'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Note'
+        '403':
+          description: 'Forbidden'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: 'Not found'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      tags:
+        - notes
+    patch:
+      summary: Update a patch note.
+      description:
+        Partially update an existing patch note.
+        You must be a maintainer of the project that the patch note belongs to.
+      operationId: patch_notes_update
+      requestBody:
+        $ref: '#/components/requestBodies/Note'
+      responses:
+        '200':
+          description: 'Updated note'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Note'
+        '400':
+          description: 'Invalid request'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorNoteUpdate'
+        '403':
+          description: 'Forbidden'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: 'Not found'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      tags:
+        - notes
+    delete:
+      summary: Delete a patch note.
+      description:
+        Delete an existing patch note.
+        You must be a maintainer of the project that the patch note belongs to.
+      operationId: patch_notes_delete
+      requestBody:
+        $ref: '#/components/requestBodies/Note'
+      responses:
+        '204':
+          description: 'Delete note'
+        '400':
+          description: 'Invalid request'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorNoteUpdate'
+        '403':
+          description: 'Forbidden'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: 'Not found'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      tags:
+        - notes
+  /api/1.4/patches/{patch_id}/notes:
+    parameters:
+      - in: path
+        name: patch_id
+        description: A unique integer value identifying the parent patch.
+        required: true
+        schema:
+          title: Patch ID
+          type: integer
+    post:
+      summary: Create a patch note.
+      description: |
+        Create note for a patch.
+      operationId: patch_notes_create
+      responses:
+        '200':
+          description: 'A patch note'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Note'
+        '201':
+          description: 'Created'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Note'
+        '400':
+          description: 'Bad request'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '403':
+          description: 'Forbidden'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: 'Not found'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      tags:
+        - notes
+    get:
+      summary: Retrieve all notes from a patch.
+      description: |
+        Retrieve all note from a specific patch.
+      operationId: patch_notes_list
+      responses:
+        '200':
+          description: 'A list of patch notes'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Note'
+        '403':
+          description: 'Forbidden'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: 'Not found'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      tags:
+        - notes
   /api/1.4/patches/{patch_id}/checks:
     parameters:
       - in: path
@@ -1514,6 +1697,14 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/CommentUpdate'
+    Note:
+      required: true
+      description: |
+        A patch note.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/NoteUpdate'
     Patch:
       required: true
       description: |
@@ -2206,6 +2397,43 @@ components:
                   $ref: '#/components/schemas/PatchEmbedded'
                 comment:
                   $ref: '#/components/schemas/CommentEmbedded'
+    Note:
+      type: object
+      title: Note
+      description: |
+        A note
+      properties:
+        id:
+          title: ID
+          type: integer
+          readOnly: true
+        created_at:
+          title: CreatedAt
+          type: string
+          format: iso8601
+          readOnly: true
+        updated_at:
+          title: UpdatedAt
+          type: string
+          format: iso8601
+          readOnly: true
+        submitter:
+          type: object
+          title: Submitter
+          readOnly: true
+          allOf:
+            - $ref: '#/components/schemas/PersonEmbedded'
+        content:
+          title: Content
+          type: string
+          readOnly: true
+          minLength: 1
+    NoteUpdate:
+      type: object
+      properties:
+        addressed:
+          title: Addressed
+          type: boolean
     PatchList:
       required:
         - state
@@ -3198,6 +3426,17 @@ components:
           type: array
           items:
             type: string
+    ErrorNoteUpdate:
+      type: object
+      title: A note update error.
+      description: |
+        A mapping of field names to validation failures.
+      properties:
+        addressed:
+          title: Addressed
+          type: array
+          items:
+            type: string
     ErrorPatchUpdate:
       type: object
       title: A patch update error.
@@ -3274,6 +3513,8 @@ tags:
     description: Series operations
   - name: comments
     description: Comment operations
+  - name: notes
+    description: Note operations
   - name: people
     description: Submitter operations
   - name: users
